# SolarusQuestCreator

./: .gitignore  CMakeLists.txt  README.md  changelog.md
doc/: Doxyfile
include/base/: Action.h  Adder.h  GroupAction.h  Model.h  Remover.h  Setter.h  SubModelRename.h  SubModelSetter.h  View.h
include/exception/: IOException.h  QuestException.h  SQCException.h
include/gui/: Editor.h  MainWindow.h
include/gui/dialog/: ImageFinder.h  NewResourceDialog.h  SpriteEditorOptionDialog.h
include/gui/editor/: SpriteAnimationEditor.h  SpriteDirectionEditor.h  SpriteEditor.h  TilePatternEditor.h  TilesetEditor.h
include/gui/graphics/: SQCGraphicsView.h  SpriteDirectionGraphicsView.h  SpriteGraphicsView.h
include/gui/item/: QuestTreeWidgetItem.h
include/gui/option/: SpriteGraphicsViewOption.h  SpritePreviewOption.h
include/gui/widget/: ColorButton.h  SQCGraphicsView.h  SQCTreeWidget.h  SpriteDirectionGraphicsView.h  SpriteDirectionPreview.h  SpriteGraphicsView.h  TilePatternListWidget.h  TilesetComboBox.h
include/sol/: Quest.h  Resource.h  Sprite.h  SpriteAnimation.h  SpriteDirection.h  SpriteSelection.h  TilePattern.h  Tileset.h  types.h
include/util/: FileTools.h
include/view/: QuestView.h  SpriteView.h  TilesetView.h
resource/: icon.qrc
src/: main.cpp
src/gui/: Editor.cpp  MainWindow.cpp
src/gui/dialog/: ImageFinder.cpp  NewResourceDialog.cpp  SpriteEditorOptionDialog.cpp
src/sol/: Quest.cpp  Resource.cpp  Sprite.cpp  SpriteAnimation.cpp  SpriteDirection.cpp  SpriteSelection.cpp  TilePattern.cpp  Tileset.cpp
src/util/: FileTools.cpp
(+17 files in other folders)
